user completed 70% successfully
